Fixed norwegian translation for "Edit permissions". Fixed alignment of hovered X icon on the User app's tab.

--- a/src/main/resources/assets/admin/common/styles/api/app/appbar-tab-menu.less
+++ b/src/main/resources/assets/admin/common/styles/api/app/appbar-tab-menu.less
@@ -113,6 +113,7 @@
         height: 20px;
         width: 20px;
         padding: 0px;
+        padding-left: 4px;
         border-radius: 11px;
         border: 0;
         cursor: pointer;
